[package]
name = "bevy-procedural-world-generation"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15.3"
noise = { version = "0.9.0", features = ["images"] }
image = { version = "0.25.5", optional = true }
rand = "0.9.0"

[features]
default = []
images = ["image", "std"]
std = []

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

